Added some final touches
- README and REPORT Done
- JUnit Tests